Mobile touch fixes and alignment

--- a/assets/intro.css
+++ b/assets/intro.css
@@ -8,6 +8,7 @@ header {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 	margin: 0 auto;
 	height: 100vh;
 }
