--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,7 @@
 /* large screens */
 html {
 	scroll-behavior: smooth;
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 body {
 	color: black;
